--- a/ServicesDirectivesFiltersWorkshop/Index.html
+++ b/ServicesDirectivesFiltersWorkshop/Index.html
@@ -24,6 +24,9 @@
     <!-- Route -->
     <script src="Scripts/Routes/route.js"></script>
 
+    <!-- Services -->
+    <script src="Scripts/Services/posts-api.service.js"></script>
+
     <!-- Controllers -->
     <script src="Scripts/Controllers/main.controller.js"></script>
     <script src="Scripts/Controllers/home.controller.js"></script>
