Workshop WIP delete button

--- a/ServicesDirectivesFiltersWorkshop/Index.html
+++ b/ServicesDirectivesFiltersWorkshop/Index.html
@@ -30,5 +30,6 @@
     <!-- Controllers -->
     <script src="Scripts/Controllers/main.controller.js"></script>
     <script src="Scripts/Controllers/home.controller.js"></script>
+    <script src="Scripts/Controllers/Posts/new-post.controller.js"></script>
 </body>
 </html>
