--- a/ServicesDirectivesFiltersWorkshop/Index.html
+++ b/ServicesDirectivesFiltersWorkshop/Index.html
@@ -27,9 +27,13 @@
     <!-- Services -->
     <script src="Scripts/Services/posts-api.service.js"></script>
 
+    <!-- Directives -->
+    <script src="Scripts/Directives/Success-Button/success-button.directive.js"></script>
+
     <!-- Controllers -->
     <script src="Scripts/Controllers/main.controller.js"></script>
     <script src="Scripts/Controllers/home.controller.js"></script>
     <script src="Scripts/Controllers/Posts/new-post.controller.js"></script>
+    <script src="Scripts/Controllers/Posts/edit-post.controller.js"></script>
 </body>
 </html>
